# tqkit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docker-vllm-amd.yml
docker/: Dockerfile.vllm-amd  README.md  entrypoint.sh
docs/: methodology.md
docs/integrate/: README.md  llama-cpp.md  mlx-swift.md  vllm-amd.md  vllm-cuda.md  vllm-swift.md
docs/internal/: local-mac-bench.md  preset-verification.md
docs/launch/: x-bomb-drafts.md
tests/: test_engines.py  test_kv_math.py
tqkit/: __init__.py  backends.py  canonical_bench.yml  cli.py  kv_math.py
tqkit/engines/: __init__.py  base.py  llama_cpp.py  longctx.py  mlx_swift.py  vllm_amd.py  vllm_cuda.py  vllm_swift.py
